<?xml version="1.0"?>
<package>
  <name>rapros</name>
  <version>1.0.0</version>
  <description>The rapros package</description>

  <maintainer email="l.cavanini@univpm.it">Luca Cavanini </maintainer>
  <maintainer email="g.cimini@univpm.it">Gionata Cimini</maintainer>
  
  <license>BSD</license>

  <author email="l.cavanini@univpm.it">Luca Cavanini </author>
  <author email="g.cimini@univpm.it">Gionata Cimini</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy_tutorials</build_depend>
  <build_depend>python-numpy</build_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>